2010-06-22  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl (FileScanWantedGeneral): Replace $MATCH
	with $1.
	(HELP::OPTIONAL EXTERNAL FILES): Document new file install.lst

	* bin/cygbuild.sh: (CygbuildCommandMain): Make 's' optional in
	'mkdir' command.
	(CygbuildCmdInstallList): New. Add support for install.lst
	control file.
	(CygbuildCmdInstallMain): Call `CygbuildCmdInstallList'.
	(CygbuildDefineGlobalMain): Add SCRIPT_INSTALL_LST_CYGFILE.
	(fromdir):

2010-06-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildGPGsignFiles): don't return error on memory lock warning.
	(CygbuildCmdMkpatchMain): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildCmdDownloadCygwinPackage): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildInstallPackageDocs): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildInstallFixDocdirInstall): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildInstallFixEtcdirInstall): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildInstallFixEtcdirInstall): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CYGBUILD_LICENSE): Change to one word: GPL-2+
	(CygbuildCmdPkgDevelStandardBin): Add --group=nobody to tar create.
	(CygbuildCmdMkpatchMain): Add --group=nobody to tar create.
	(CygbuildInstallFixDocdirInstall): Add --group=nobody to tar create.
	(CygbuildInstallFixEtcdirInstall): Add --group=nobody to tar create.

2010-06-17  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildRunPythonSetupCmd): Check python
	binary before use.

2010-03-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* Makefile (doc/manual/index.txt): New.
	(doc/manual/index.html): New.
	(doc): New.

	* bin/lib/cygbuild.pl: (HELP::Other Commands): Fix typo in 'cysrc'
	command option syntax.
	(HELP::DESCRIPTION): Move after SYNOPSIS as per POSIX manual page
	standard.